# algo-trading

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Containerfile  README.md  cloudbuild.yaml  main.py  pyproject.toml  test_main.py
.github/workflows/: test.yaml
