[tool.poetry]
name = "algo-trading"
version = "0.1.0"
description = "Hans brilliant attempt at algorithmic trading"
authors = ["Hans Knecht <contact@hans-knecht.com>"]
license = "All Rights Reserved"
readme = "README.md"
packages = [{include = "algo_trading"}]

[tool.poetry.dependencies]
python = "^3.11"
twelvedata = "^1.2.12"
alpaca-py = "^0.8.2"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.0.0"
pytest = "^7.4.0"
coverage = "^7.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
